RESOLVED FIXED26867
Animation play-state property does not work correctly
https://bugs.webkit.org/show_bug.cgi?id=26867
Summary Animation play-state property does not work correctly
Chris Marrin
Reported 2009-06-30 15:23:50 PDT
We tested and it's broken. I will add a testcase shortly
Attachments
test case (3.11 KB, text/html)
2009-06-30 15:29 PDT, Chris Marrin
no flags
Patch with test (14.25 KB, patch)
2009-07-29 10:11 PDT, Chris Marrin
simon.fraser: review+
Chris Marrin
Comment 1 2009-06-30 15:29:44 PDT
Created attachment 32099 [details] test case This test case should be able to pause and continue the animations using the arrow keys. But they always animate
Chris Marrin
Comment 2 2009-07-29 10:11:26 PDT
Created attachment 33720 [details] Patch with test
Chris Marrin
Comment 3 2009-07-29 11:03:36 PDT
Sending LayoutTests/ChangeLog Sending LayoutTests/animations/animation-test-helpers.js Adding LayoutTests/animations/play-state-expected.txt Adding LayoutTests/animations/play-state.html Sending LayoutTests/platform/mac/fast/css/getComputedStyle/computed-style-expected.txt Sending LayoutTests/platform/mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt Sending LayoutTests/svg/css/getComputedStyle-basic-expected.txt Sending WebCore/ChangeLog Sending WebCore/css/CSSComputedStyleDeclaration.cpp Sending WebCore/css/CSSParser.cpp Sending WebCore/css/CSSParser.h Sending WebCore/css/CSSPropertyNames.in Sending WebCore/css/CSSStyleSelector.cpp Sending WebCore/css/CSSStyleSelector.h Sending WebCore/platform/animation/Animation.h Sending WebCore/rendering/style/RenderStyleConstants.h Transmitting file data ................ Committed revision 46547.
Note You need to log in before you can comment on or make changes to this bug.