        Adding -webkit-animation-play-state back in         https://bugs.webkit.org/show_bug.cgi?id=26867

We've decided to keep -webkit-animation-play-state. So this
        just adds back in the code from https://bugs.webkit.org/show_bug.cgi?id=22907.



Canonical link: https://commits.webkit.org/38153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46547 268f45cc-cd09-0410-ab3c-d52691b4dbfc