WebCore/rendering/style/RenderStyleConstants.h
@@ -212,6 +212,11 @@ enum StyleContentType {
 
 enum EBorderFit { BorderFitBorder, BorderFitLines };
 
+enum EAnimPlayState {
+    AnimPlayStatePlaying = 0x0,
+    AnimPlayStatePaused = 0x1
+};
+
 enum ETimingFunctionType { LinearTimingFunction, CubicBezierTimingFunction };
 
 enum EWhiteSpace {
